--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "cypress": "^13.6.6",
     "cypress-mochawesome-reporter": "^3.8.2"
+  },
+  "scripts": {
+    "cy:run-login": "cypress run --spec cypress/e2e/standardUserLogin.cy.js"
   }
+
 }
